<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meta</string>
    <string name="action_settings">Settings</string>
    <string name="essensplan">Essensplan</string>
    <string name="pc_pool">PC Pool</string>
    <string name="social_features">Social Features</string>
    <string name="stisys">StISys</string>
    <string name="schnitzeljagd">Schnitzeljagd</string>
    <string name="optionen">Optionen</string>    
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <string name="title_activity_stisys">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mensa">MensaActivity</string>
    <string name="platzhalter">platzhalter</string>
    <string name="title_activity_schnitzeljagd">SchnitzeljagdActivity</string>
    <string name="title_activity_social_features">SocialFeaturesActivity</string>
    <string name="title_activity_veranstaltungsplan">VeranstaltungsplanActivity</string>
    <string name="title_activity_optionen">OptionenActivity</string>
    <string name="webtest">webtest</string>
    <string name="sj_scan">Barcode scannen</string>
    <string name="sj_orten">GPS Koordinaten bestimmen</string>
    <string name="sj_acc">Ziel Erfüllen</string>
    <string name="vp_aktualisieren">Aktualisieren</string>
    <string name="vp_exportieren">Exportieren</string>
    <string name="vp_anzeigen">Anzeigen</string>
    <string name="vp_exportieren_menu">Individueller Veranstaltungsplan</string>
    <string name="sf_praktika">Praktika</string>
    <string name="sf_chat">Chat</string>
    <string name="veranstaltungsplan">Veranstaltungsplan</string>
    <string name="partnerLoeschen">Löschen</string>
    <string name="partnerAendern">Ändern</string>
    <string name="hinzufuegen">Partner hinzufügen</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="matNr">Matrikelnummer</string>
    <string name="email">E-Mail-Adresse</string>
    <string name="handy">Handynummer</string>

</resources>