<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btn_gps"
        style="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/veranstaltung"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="veranstaltungsClick"
        android:text="@string/veranstaltungsplan"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_gps"
        android:layout_alignRight="@+id/btn_gps"
        android:layout_below="@+id/btn_gps"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/essen"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="essensClick"
        android:text="@string/essensplan"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_scan"
        android:layout_below="@+id/btn_scan"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/social"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="socialClick"
        android:text="@string/social_features"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/pool"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="poolClick"
        android:text="@string/pc_pool"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/stisys"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="stisysClick"
        android:text="@string/stisys"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/schnitzel"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="schnitzelClick"
        android:text="@string/schnitzeljagd"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableLeft="@drawable/options"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:onClick="optionClick"
        android:text="@string/optionen"
        android:textColor="@color/white"
        android:visibility="visible" />

</RelativeLayout>