<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SchnitzeljagdActivity" >

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/platzhalter"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:onClick="scanClick"
            android:text="@string/sj_scan"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/platzhalter"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:onClick="getCoordinatesClick"
            android:text="@string/sj_orten"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btn_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@color/black"
            android:drawableLeft="@drawable/platzhalter"
            android:drawablePadding="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:onClick="accClick"
            android:text="@string/sj_acc"
            android:textColor="@color/white"
            android:textColorHint="@color/black" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:progress="50" />

</LinearLayout>